...
            onClick = {
                if(viewModel.validarFormulario()){
                    navController.navigate("resumen")
                }
            },
            modifier = Modifier.fillMaxWidth()
        ) { Text("Registrar")
        }
    }
}
